# andar

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  ruff.toml  sitemap.xml
.github/workflows/: publish.yml
andar/: __init__.py  field_conf.py  parser_utils.py  path_builder.py  path_model.py
andar/examples/: __init__.py  path_model_examples.py
docs/: index.md
reference/andar/: index.html
reference/andar/check_utils/: index.html
reference/andar/examples/: index.html
reference/andar/examples/path_model_examples/: index.html
reference/andar/field_conf/: index.html
reference/andar/parser_utils/: index.html
reference/andar/path_model/: index.html
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
site/reference/andar/: index.html
site/reference/andar/check_utils/: index.html
site/reference/andar/examples/: index.html
site/reference/andar/examples/path_model_examples/: index.html
site/reference/andar/field_conf/: index.html
site/reference/andar/parser_utils/: index.html
site/reference/andar/path_builder/: index.html
site/reference/andar/path_model/: index.html
site/search/: search_index.json
tests/: test_path_builder.py  test_path_model.py
