[project]
name = "andar"
version = "0.1.0"
description = "Andar package implements a PathModel class that allows to define, build and parse templated file paths."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.urls]
repository = "https://github.com/fabarca/andar"
issues = "https://github.com/fabarca/andar/issues"

[tool.setuptools.packages.find]
include = ["andar"]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
